# wanderwise-huge-repo

./: README.md
project/capstone-city-scrapper/: main.py  requirements.txt
project/wander-wise-cc-api/: Dockerfile  README.MD  app.js  package-lock.json  package.json  swagger.yaml  wander-wise-openapi3_0.yaml
project/wander-wise-cc-api/controllers/: auth.js  cities.js  jobs.js  posts.js  productController.js  uploads.js
project/wander-wise-cc-api/models/: City.js  Job.js  Post.js  Product.js  User.js
project/wander-wise-cc-api/public/: browser-app.js  index.html
project/wander-wise-cc-api/routes/: auth.js  cities.js  jobs.js  posts.js  productRoutes.js
project/wander-wise-rest-api-cc-2/: .gitignore  Dockerfile  README.MD  app.js  package-lock.json  package.json
project/wander-wise-rest-api-cc-2/controllers/: auth.js  cities.js  destinations.js  posts.js  upload.js  users.js
project/wanderwise-antara-news-scraper/: Dockerfile  README.md  main.py  pyproject.toml
project/wanderwise-cloud-function/: .firebaserc
project/wanderwise-detik-news-scraper/: README.md  main.py  pyproject.toml  requirements.txt
project/wanderwise-machine-learning/: README.md
project/wanderwise-scraper-manager/: .gitignore  main.py  pyproject.toml  test_main.http
project/wanderwise-scraper-manager/config/: config.py
project/wanderwise-scraper-manager/functions/v1/: score_updater.py
project/wanderwise-scraper-manager/helper/: classifier.py  ner.py  summarizer.py
project/wanderwise-scraper-manager/scrapers/v1/: detik_crime.py
(+15 files in other folders)
